[package]
name = "stream-find"
description = "Add a `find` and `find_map` methods to any stream."
authors = [ "Nattapong Sirilappanich" ]
repository = "https://github.com/NattapongSiri/stream-find-rs"
version = "0.3.0"
edition = "2024"
license = "MIT"

[dependencies]
futures = "0.3.31"

[dev-dependencies]
tokio = { version = "1.44.1", features = [ "macros" ] }
tokio-test = "0.4.4"
